$Id$

Changes since 1.0.1 [2006-08-30]:

- Mac OS X port (with help from Steve Huff).
- use safe string functions (courtesy of Olivier Cherrier).

Changes since 1.0 [2006-08-30]:

- don't core dump if given host list is empty (reported by Brian King).
- fixed host name length measurement when reading from stdin.

No change since 1.0b10 [2006-08-10].

Changes since 1.0b9 [2006-07-06]:

- new 'F', 'v' and 'D' commands for interactive mode.
- added -F option (as suggested by Chase Phillips).
- fixed long standing but rare data corruption bug (reported by Jon Amundsen).

Changes since 1.0b8 [2006-06-30]:

- child exit status was not saved when waiting for its orphans.
- look for termcap in ncurses library (reported by Stephan Hegel).

Changes since 1.0b7 [2006-05-22]:

- SHMUX_SSH*_OPTS are now parsed by shmux, allowing passing more complex
  options strings.  (loosely based on code from Jos Backus.)
- added -B option (courtesy of Chase Phillips and Jos Backus).
- minor enhancement of "interactive mode" status reporting.

Changes since 1.0b6 [2004-12-15]:

- improved timeout enforcement using process groups (suggested by Jos Backus).
- improved handling of "impossible" waitpid() failures.

Changes since 1.0b5 [2004-09-20]:

- user@target now works with rsh.
- fixed miscellaneous assumptions/bugs related to fping.
- user@target is no longer incompatible with -p.

Changes since 1.0b4 [2004-08-07]:

- use SHMUX_SPAWNMODE environmental variable, as per the manual page.
- new SHMUX_MAX environmental variable (suggested by Jon Amundsen).

Changes since 1.0b3 [2004-07-06]:

- ported to cygwin (problems reported by Jon Amundsen).
- better background detection code.
 
Changes since 0.13b [2004-06-07]:

- added code to try to avoid hanging accessing the controlling terminal.
- Sun's OpenSSH chokes on "-xa", use "-x -a" instead (reported by Poehner Uwe).

Changes since 0.12b [2004-04-05]:

- clear environment of harmful variables to run tests.
- updated "timers" test for Solaris.