@@ -1,4 +1,4 @@
-Copyright (c) 2002-2016 Christophe Kalt.
+Copyright (c) 2002-2017 Christophe Kalt.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
